--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dropper-service",
+  "name": "lafia-service",
   "version": "1.0.0",
   "description": "Server-Side implementation for dropper services.",
   "main": "./dist/src/app/index.js",
@@ -24,85 +24,48 @@
       "/dist/"
     ]
   },
-  "keywords": [
-    "patient",
-    "doctor",
-    "health",
-    "fhir",
-    "webrtc",
-    "erpnest",
-    "platform-sdk",
-    "dropper.io",
-    "dropper",
-    "carenow",
-    "carenow broadcast"
-  ],
+  "keywords": [],
   "author": {
-    "name": "Shedrack Ajaegbu",
-    "email": "shedrack3@gmail.com",
-    "url": "https://github.com/Theshedman"
+    "name": "Eugenia Ikwuegbu",
+    "email": "eugeniaikwuegbu@gmail.com",
+    "url": "https://github.com/eugeniaikwuegbu"
   },
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Theshedman/dropper-service.git"
+    "url": "git+https://github.com/eugeniaikwuegbu/lafia.io.git"
   },
   "bugs": {
-    "url": "https://github.com/Theshedman/dropper-service/issues"
+    "url": "https://github.com/eugeniaikwuegbu/lafia.io/issues"
   },
-  "homepage": "https://github.com/Theshedman/dropper-service#readme",
+  "homepage": "https://github.com/eugeniaikwuegbu/lafia.io#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.11.0",
     "@jest/globals": "^27.0.6",
-    "amqplib": "0.7.0",
-    "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-libphonenumber": "^3.2.21",
     "inversify": "^5.0.5",
     "inversify-express-utils": "^6.3.2",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
     "knex": "0.21.15",
-    "lodash": "^4.17.21",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.6.0",
     "objection": "^2.2.15",
     "objection-visibility": "^1.1.0",
-    "paystack-api": "^2.0.6",
     "pg": "8.5.1",
     "pm2": "^4.5.5",
     "reflect-metadata": "^0.1.13",
     "short-uuid": "^4.1.0",
     "shortid": "^2.2.16",
-    "streamifier": "^0.1.1",
-    "twilio": "^3.62.0",
     "uuid": "^8.3.2",
     "ws": "3.3.2",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.5.17",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/chai": "^4.2.7",
-    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
-    "@types/google-libphonenumber": "^7.4.21",
-    "@types/hapi__joi": "^16.0.11",
     "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.3.6",
-    "@types/lodash": "^4.14.168",
-    "@types/multer": "^1.4.5",
     "@types/node": "12.12.6",
     "@types/nodemailer": "^6.4.1",
     "@types/shortid": "^0.0.29",
-    "@types/streamifier": "^0.1.0",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
