--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.11.0",
     "@jest/globals": "^27.0.6",
+    "@types/multer": "1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
     "inversify": "^5.0.5",
     "inversify-express-utils": "^6.3.2",
     "knex": "0.21.15",
+    "multer": "1.4.2",
     "objection": "^2.2.15",
     "objection-visibility": "^1.1.0",
     "pg": "8.5.1",
