--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "outDir": "dist",                         /* Redirect output structure to the directory. */
     "lib": ["es6", "dom"],                    /* Specify library files to be included in the compilation. */
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types",
+    ],
 
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
